improved for loops

--- a/A0_PythonBasics/Assignment0-2.ipynb
+++ b/A0_PythonBasics/Assignment0-2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-27T22:18:59.136051Z",
@@ -41,100 +41,7 @@
     },
     "id": "NA2nT_F-vB_O"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>response</th>\n",
-       "      <th>target</th>\n",
-       "      <th>distr1</th>\n",
-       "      <th>distr2</th>\n",
-       "      <th>subject</th>\n",
-       "      <th>error</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.717854</td>\n",
-       "      <td>3.041933</td>\n",
-       "      <td>2.727768</td>\n",
-       "      <td>-1.600649</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.324079</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.520928</td>\n",
-       "      <td>3.041933</td>\n",
-       "      <td>2.727768</td>\n",
-       "      <td>-1.600649</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.521005</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.683595</td>\n",
-       "      <td>3.041933</td>\n",
-       "      <td>2.727768</td>\n",
-       "      <td>-1.600649</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.358338</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2.712245</td>\n",
-       "      <td>3.041933</td>\n",
-       "      <td>2.727768</td>\n",
-       "      <td>-1.600649</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.329688</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.565060</td>\n",
-       "      <td>3.041933</td>\n",
-       "      <td>2.727768</td>\n",
-       "      <td>-1.600649</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.476873</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   response    target    distr1    distr2  subject     error\n",
-       "0  2.717854  3.041933  2.727768 -1.600649      0.0 -0.324079\n",
-       "1  2.520928  3.041933  2.727768 -1.600649      0.0 -0.521005\n",
-       "2  2.683595  3.041933  2.727768 -1.600649      0.0 -0.358338\n",
-       "3  2.712245  3.041933  2.727768 -1.600649      0.0 -0.329688\n",
-       "4  2.565060  3.041933  2.727768 -1.600649      0.0 -0.476873"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -149,7 +56,9 @@
     "\n",
     "# add the error in radians\n",
     "df['error'] = circdist_rad(df.response, df. target)\n",
-    "df.head()\n"
+    "\n",
+    "# list of subjects\n",
+    "subjects = np.unique(df.subject)\n"
    ]
   },
   {
@@ -221,7 +130,7 @@
    },
    "outputs": [],
    "source": [
-    "for sub in range(9):\n",
+    "for sub in subjects:\n",
     "    bool_s = ???\n",
     "    ds = ???\n",
     "    \n",
@@ -283,7 +192,7 @@
    "source": [
     "df['error2'] = ???\n",
     "mse = pd.DataFrame() #mean squared error\n",
-    "for sub in range(9):\n",
+    "for sub in subjects:\n",
     "    bool_s = ???\n",
     "    ds = ???\n",
     "    mse_s = np.mean(???)\n",
@@ -374,7 +283,7 @@
    "outputs": [],
    "source": [
     "prec=pd.DataFrame() # empty dataframe to save stuff to\n",
-    "for sub in range(9):\n",
+    "for sub in subjects:\n",
     "    bool_s = ???\n",
     "    ds = ???\n",
     "    prec.loc[sub,'top'] = np.var(ds[???].error) #save precisions in the dataframe\n",
