--- a/A2_LogisticRegression/Assignment2A.ipynb
+++ b/A2_LogisticRegression/Assignment2A.ipynb
@@ -53,12 +53,10 @@
     " - responses are not continuous (an angular location taking arbitrary values from 0º to 360º) but categorical (CW or CCW, with just two possible discrete responses). In fact there are just two categories so these responses are binary.\n",
     " - apart from the angular displacement of the target w.r.t. the probe as in our previous assignment, there are **three other experimental variables** that vary from trial to trial: **memory load** (3 or 4 items), **delay duration** (0.1, 1 or 3 s), and whether the **nearest distractor is located CW or CCW to the target**.\n",
     "\n",
-    "We want to understand how these factors of interest impact the behavior, which will help us draw some conclusions about the properties of visual working memory. Specifically, as for the other dataset with continous responses (Experiment 2, Assignment 1), we will want to test whether distractor stimuli have an attracted effect on the item represented in working memory. By addressing this real research question, we will learn the main concepts and associated methods to analyze binary choice datasets:\n",
+    "We want to understand how these factors of interest impact the behavior, which will help us draw some conclusions about the properties of visual working memory. Specifically, as for the other dataset with continous responses (Experiment 2, Assignment 1), we will want to **test whether distractor stimuli have an attracting effect on the item represented in working memory**. By addressing this real research question, we will learn the main concepts and associated methods to analyze binary choice datasets:\n",
     " - psychometric curve, to relate the performance to a single factor of interest\n",
     " - logistic regression, to relate the performance to multiple factors of interest\n",
-    " - interactions (to identify possible interactions of these factors)\n",
-    " \n",
-    " Let's start by importing the typical libraries (Numpy for basic data operation, Matplotlib for plotting, Pandas to deal with dataframes)."
+    " - interactions (to identify possible interactions of these factors)"
    ]
   },
   {
@@ -71,6 +69,13 @@
    "metadata": {},
    "source": [
     "![almeida2015_fig3.png](attachment:almeida2015_fig3.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Let's start by importing the typical libraries (Numpy for basic data operation, Matplotlib for plotting, Pandas to deal with dataframes)."
    ]
   },
   {
@@ -134,7 +139,7 @@
    "source": [
     "## 1 Plotting the psychometric curve\n",
     "\n",
-    "The psychometric curve is used in discrimination or detection tasks to represent how the choice of the participant depends on the property of the stimulus that is varied across trials, e.g. the contrast in visual detection tasks, the motion in motion discrimination task, the sound intensity in auditory detection tasks, etc. In this experiment the relevant property that determines the choice of the subject (CW/CCW) is the angular displacement between the probe stimulus and the target stimulus. We have used this distance already in Assignment 1, let us compute it again and add it to the dataframe. We will use the function *circdist_deg* to compte the distance between two angles, as in previous assignments."
+    "The psychometric curve is used in discrimination or detection tasks to represent how the choice of the participant depends on the property of the stimulus that is varied across trials, e.g. the contrast in visual detection tasks, the motion in motion discrimination task, the sound intensity in auditory detection tasks, etc. In this experiment the relevant property that determines the choice of the subject (CW/CCW) is the angular displacement between the probe stimulus and the target stimulus. We have used this displacement already in Assignment 1, let us compute it again and add it to the dataframe. We will use the function *circdist_deg* to compte the distance between two angles, as in previous assignments."
    ]
   },
   {
@@ -163,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If subjects were perfect, they would always respond CW (1) when that quantity is positive, and CCW (-1) when that quantity is negative. They are not (sorry for the late disappointment about the true nature of humankind). Still, they hopefully don't respond at chance level, so we expect to see that they will tend to respond more CW for positive values (and even more so if the distance is large), and and more CCW otherwise (again, even more so if the distance is large). This is exactly what we want to capture with the psychometric curve: **how the proportion of CW/CCW choices depend on the displacement of the probe w.r.t the target**. To do so, we want to group trials for each possible value of the angular displacement and compute the proportion of CW/CCW responses for each group separately.<br> \n",
+    "If subjects were perfect, they would always respond CCW (-1) when that quantity is positive, and CW (+1) when that quantity is negative. They are not (sorry for the late disappointment about the true nature of humankind). Still, they hopefully don't respond at chance level, so we expect to see that they will tend to respond more CCW for positive values (and even more so if the distance is large), and and more CW otherwise (again, even more so if the distance is large). This is exactly what we want to capture with the psychometric curve: **how the proportion of CW/CCW choices depend on the displacement of the probe w.r.t the target**. To do so, we want to group trials for each possible value of the angular displacement and compute the proportion of CW/CCW responses for each group separately.<br> \n",
     "First let us check **how many different values the *displacement* measure takes**. Write the code below (reminder: we computed something similar in Assignment 0). "
    ]
   },
@@ -291,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And we're not ready to plot our first psychometric curve! Using the function *errorbar* from matplotlib, **plot, for each value of the angular displacement, an error bar centered on the proportion of CW choices for the corresponding trials** (and the length of the error bar is set by the standard error of the mean). The value along the X axis should correspond to the angular distances. Do not forget to **add labels on the axes**!"
+    "And we're now ready to plot our first psychometric curve! Using the function *errorbar* from matplotlib, **plot, for each value of the angular displacement, an error bar centered on the proportion of CW choices for the corresponding trials** (and the length of the error bar is set by the standard error of the mean). The value along the X axis should correspond to the angular distances. Do not forget to **add labels on the axes**!"
    ]
   },
   {
@@ -355,7 +360,7 @@
    "metadata": {},
    "source": [
     "## 2 The psychometric function\n",
-    "The plot below summarize the dependence of judgments for a few different values of target displacement. We would like to formalize this into a simple model that captures the statistical relationship between the target displacement and the choice. More specifically, the model will characterize the probability of a CCW $p(CCW)$ response as a function of target distance $d$. We cannot use a simple linear relationship $p(CCW) = w_0 + w_1 d$ because this would predict that as $d$ goes to infinity (either $+ \\infty$ or $-\\infty$), $p(CCW)$ would also go to infinty. But $p(CCW)$ is a probability so it is **bounded between 0 and 1**. So we need to introduce a non-linearity that maps all continuous values onto values in the range [ 0 1]. This is obtained by using a sigmoidal function. A very classical example of sigmoidal function is the logistic function $\\sigma$:\n",
+    "The plot below summarize the dependence of judgments for a few different values of target displacement. We would like to formalize this into a simple model that captures the statistical relationship between the target displacement and the choice. More specifically, the model will characterize the probability of a CCW $p(CCW)$ response as a function of target distance $d$. We cannot use a simple linear relationship $p(CCW) = w_0 + w_1 d$ because this would predict that as $d$ goes to infinity (either $+ \\infty$ or $-\\infty$), $p(CCW)$ would also go to infinity. But $p(CCW)$ is a probability so it is **bounded between 0 and 1**. So we need to introduce a non-linearity that maps all continuous values onto values in the range [ 0 1]. This is obtained by using a sigmoidal function. A very classical example of sigmoidal function is the logistic function $\\sigma$:\n",
     "<br> \n",
     "$\\sigma(x) = \\frac{1}{1+ e^{-x}}$\n",
     "<br>\n",
@@ -428,7 +433,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See, a sigmoidal function with values bounded between 0 and 1, just as we wanted! <br>\n",
     "Now, we will plug our linear model of angular displacement into this sigmoidal function, which gives us the formula: <br>\n",
     "$p(CCW) = \\sigma(w_0 + w_1 d) = \\frac{1}{1+ e^{-w_0 + w_1 d}}$\n",
     "\n",
@@ -500,9 +504,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "$w_1$ sets the **sensitivity** of the dependent variable $p(CCW)$ on the factor $d$, i.e. the weight of $d$ on $p(CCW)$. The larger the value, the steeper the slope. $w_0$ sets the $bias$ of the curve (or the intercept, just as in linear regression). It sets the value of the probability when the factor is null (because $p(CCW|d=0) = \\sigma(w_0+ w1*0) = \\sigma(w_0)$. If the value is null, then at $d=0$ both responses are equally likely (since $\\sigma(0)=0.5$). A positive value of $w_0$ means a bias towards CCW responses, a negative value means a bias towards CW responses."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -559,9 +561,9 @@
     "def single_likelihood(w0,w1,d,resp):\n",
     "    \n",
     "    # probability of a CCW response given by the model\n",
-    "    pCCW = psychometric_model(d,w0,w1)   \n",
+    "    pCCW = psychometric_model(??)   \n",
     "    \n",
-    "    if (resp==1): # if actual response is CW\n",
+    "    if ?? # if actual response is CW\n",
     "        # likelihood is 1-p(CCW)\n",
     "        p = ??\n",
     "    else:\n",
@@ -569,7 +571,7 @@
     "        # likelihood is p(CCW)\n",
     "        p = ??\n",
     "        \n",
-    "    return p"
+    "    return ??"
    ]
   },
   {
@@ -599,7 +601,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Good! Now this was just for one trial, when we need to compute the likelihood of the whole dataset. Because in our model these are independent observations, this likelihood for the whole dataset if obtained by taking the product of the likelihood for each trial independently. Well it's actually more convenient to turn than into logarithms, and so the log-likelihood of the datasets is the sum of the log-likelihood for individual trials ( no worries if you do not follow that part). \n",
+    "Good! Now this was just for one trial, when we need to compute the likelihood of the whole dataset. Because in our model these are independent observations, this likelihood for the whole dataset is obtained by taking the product of the likelihoods obtained for each trial independently. Well it's actually more convenient to turn than into logarithms, and so the log-likelihood of the datasets is the sum of the log-likelihood for individual trials ( no worries if you do not follow that part). \n",
     "We are going to call this log-likelihood $L(w_0,w_1)$ which is a function of both parameters.\n",
     "**Complete the holes to write a function that computes the log-likelihood of model for a given value of the parameters**. Note that our function will take the dataset dataframe as input, and loop through all trials in the dataframe."
    ]
@@ -611,7 +613,7 @@
    "outputs": [],
    "source": [
     "def LogLikelihood(w0,w1, df):\n",
-    "    #extract the array of target distance from the dataframe\n",
+    "    #extract the array of probe displacements from the dataframe\n",
     "    dist = ??\n",
     "    \n",
     "    #extract the array of responses from the dataframe\n",
@@ -654,7 +656,7 @@
    "metadata": {},
    "source": [
     "We're almost there! Now we want to maximize the value of the LLH over the space of parameters. To simply things, we will just maximize it over parameter $w_1$ assuming that $w_0=0$ (i.e. no response bias).\n",
-    "**Plot the value of the log-likelihood of the model as a function of $w_1$ (in the range from -0.3 to 0.3), assuming $w_0$.**\n",
+    "**Plot the value of the log-likelihood of the model as a function of $w_1$ (in the range from -0.3 to 0.3), assuming $w_0=0$.**\n",
     "\n",
     "We can extract the maximum-likelihood value of the parameter (often noted $\\hat w_1$) by looking at the value of $w_1$ in our array that maximizes the likelihood. Fill the code below to print the value of this parameter and add a vertical line in the LLH plot at the corresponding value."
    ]
@@ -727,7 +729,7 @@
    "source": [
     "## 4. Assessing the influence of the distractors\n",
     "Let's go back to our research question. So far what we have done is computing the proportion of CCW responses as a function of the angular displacement between the probe and the stimulus, and then fitting a statistical model that captures this relationship (the psychometric model). But all that really told us is that subjects seem to be the task appropriately, and the easier it is (the further away are the probe and the stimulus), the better they do. Reassuring, but perhaps not enough to make headlines... <br>\n",
-    "Really, what we are interested in is the influence of distractor on the behavior. More specifically, our hypothesis is that the nearest distractor may have an attractive effect on the representation stored in working memory. In other words, if the distractor is located CCW to the target, it should increase the probability of CCW responses. Conversely, if it is located CW to the target, it should decrase this probability (go back to the figure of the paradigm if you don't get this). Let's explore this idea using the tools of psychometric curves. <br>\n",
+    "Really, what we are interested in is the influence of distractor on the behavior. More specifically, our hypothesis is that the nearest distractor may have an attractive effect on the representation stored in working memory. In other words, if the distractor is located CW to the target, the memory of the target should drift towards CW, and so by contrast the probe will look more displaced to CCW than it actually is, which should increase the probability of CCW responses. Conversely, if it is located CCW to the target, it should decrase this probability (go back to the figure of the paradigm if you don't get this). Let's explore this idea using the tools of psychometric curves. <br>\n",
     "First, we need to define the angular distance between the target and the nearest distractor (to see whether it is located CW or CCW).\n",
     "**Add a column called *'dist_distractor'* to the dataframe that computes this angular distance.**\n",
     "(As always, we will try to use the functions that we have defined previously)\n",
@@ -767,7 +769,7 @@
     "    #the unique values of different probe_target distances shown\n",
     "    target_dist_unique = np.unique(target_dist) \n",
     "\n",
-    "    #mean of responses\n",
+    "    #proportion of CCW responses\n",
     "    mean_resp =[np.mean(resp[target_dist==x]==-1) for x in target_dist_unique] \n",
     "\n",
     "    #sem of responses, for each different probe_target distance\n",
