--- a/A2_LogisticRegression/Assignment2B.ipynb
+++ b/A2_LogisticRegression/Assignment2B.ipynb
@@ -129,7 +129,7 @@
    },
    "outputs": [],
    "source": [
-    "# change the column 'response': all -1's become 0's\n",
+    "# change the column 'response': all -1's become 1's and 1s become 0's\n",
     "\n",
     "# check we did good\n",
     "df.head()"
