--- a/A2_LogisticRegression/Assignment2A.ipynb
+++ b/A2_LogisticRegression/Assignment2A.ipynb
@@ -214,7 +214,7 @@
     "# select array of responses for all corresponding trial\n",
     "response_displacement4 = ??\n",
     "\n",
-    "# now compute the average proportion of CCW responses for these trials\n",
+    "# now compute the proportion of CCW responses for these trials\n",
     "??"
    ]
   },
@@ -242,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Use this function to compute the standard error for the mean proportion of CW responses (in trial with distance = 4 degrees).**"
+    "**Use this function to compute the standard error for the mean proportion of CCW responses (in trial with distance = 4 degrees).**"
    ]
   },
   {
@@ -434,7 +434,7 @@
    "metadata": {},
    "source": [
     "Now, we will plug our linear model of angular displacement into this sigmoidal function, which gives us the formula: <br>\n",
-    "$p(CCW) = \\sigma(w_0 + w_1 d) = \\frac{1}{1+ e^{-w_0 + w_1 d}}$\n",
+    "$p(CCW) = \\sigma(w_0 + w_1 d) = \\frac{1}{1+ e^{-(w_0 + w_1 d)}}$\n",
     "\n",
     "This is our psychometric model. It gives a probability of response CCW as a function of angular displacement $d$. It has two parameters $w_0$ and $w_1$, similarly to simple linear regression. We'll see their role in a minute.\n",
     "**Write a function that takes 3 arguments as input (the displacement $d$, parameter $w_0$ and parameter $w_1$) and outputs the corresponding probabiliy of response CCW according to the model**."
