--- a/A4_SpikeTrainAnalysis/Assignment4.ipynb
+++ b/A4_SpikeTrainAnalysis/Assignment4.ipynb
@@ -222,7 +222,7 @@
    "source": [
     "# 2. Auto-correlation and cross-correlation\n",
     "\n",
-    "## 2.1 Auto-correlation\n",
+    "## 2.1 Binning the spikes\n",
     "\n",
     "We want to understand better the dynamics of spiking activity, using the tool of auto-correlation. As explained in the first video, auto-correlation tells us about the **time scales that regulate spiking activity**: whether there are periods of higher firing (due to either external factors, i.e. the presence of a stimulus to which the neuron responds; or internal factors, i.e. increased excitability in the local neural network), and the time scales of this period. Remember: the auto-correlation of the (really dull) homogeneous Poisson process is completely flat at 0 (except for the value at zero-lag, as a variable is always correlated with itself).\n",
     "\n",
@@ -262,6 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 2.2 Auto-correlation (Optional)\n",
     "Now **compute the auto-correlation of the signal** using the function `correlate` from the `scipy` package.\n",
     "We need to compute the measure on **centered data** (i.e. removing the mean of the value to the spike count data) so that the null values correspond to 0."
    ]
@@ -339,7 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 Cross-correlation\n",
+    "## 2.3 Cross-correlation (Optional)\n",
     "\n",
     "Auto-correlation is like cross-correlation applied to the same signal, but what is cross-correlation? Cross-correlation allows to look for **interactions between two signals not only at corresponding times, but also with certain time lags**. For example, if one neuron receives excitatory synaptic input from another neuron, on general that higher activity in the pre-synaptic neuron will be followed with higher activity in the post-synaptic neuron (with a certain lag set by synaptic dynamics). This will be directly visible in the cross-correlogram as a bump occurring at the corresponding lag.\n",
     "**Warning!** while it is tempting to interpret a cross-correlogram as a causal interaction between the two signals, cross-correlograms can also signal shared influence impacting both signals. In fact in neural activity, the probability that two neurons are connected by a direct synapse is rather low, so more often than not a cross-correlogram reveals the influence from shared incoming neural signals.\n",
@@ -867,6 +868,7 @@
     "The Fano Factor is a **measure of the reliability of the spiking process**. In other words it tells us how stochastic spiking is. It is computed on spike counts on a window long enough to have on average more than one spike. The value is $FF = \\frac{V}{M}$, where $V$ is the variance of the spike count across trials (windows), and $M$ is the mean of the spike count across trials.The homogeneous Poisson process has a Fano Factor equal to 1. Larger values means even more random than that (i.e. highly bursting), lower values means more regular firing (i.e. periodic).\n",
     "The Fano Factor must be computed after taking into account the factors that we know affect the activity of the neuron (and so introduce variability in the spiking). Which is why we will compute separately for leftward and rightward responses.\n",
     "\n",
+    "## 4.1\n",
     "**Compute the number of spikes in each trial in a window of 500 ms starting at response onset**, and as a variable to the dataframe."
    ]
   },
@@ -898,6 +900,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 4.2 (Optional)\n",
     "**Compute separately for leftward and rightward responses the average spike count, variance of the spike count and Fano Factor. Plot all values in bar plots.** (Note: the variance is computed using `np.var`."
    ]
   },
