--- a/A0_PythonBasics/Assignment0.ipynb
+++ b/A0_PythonBasics/Assignment0.ipynb
@@ -415,8 +415,11 @@
     }
    ],
    "source": [
-    "# write your code here\n",
-    "\n"
+    "# create vector as average of first two columns\n",
+    "\n",
+    "# difference with third column\n",
+    "\n",
+    "# maximum absolute difference (should be 0) - NOTE: we could also use boolean arrays which are introduced below\n"
    ]
   },
   {
@@ -506,6 +509,7 @@
     "# list of all subject indices\n",
     "subject_list = ???\n",
     "\n",
+    "# number of elements in that list (corresponds to the number of subjects)\n",
     "nSubject = len(subject_list)\n",
     "print(\"number of subjects: \", nSubject)"
    ]
@@ -519,7 +523,7 @@
     "# creat boolean array that is true for rows corresponding to subject 7\n",
     "bool7 = ???\n",
     "\n",
-    "# select data for subject 7\n",
+    "# select data for subject 7 (i.e corresponding rows)\n",
     "subj7 = ???"
    ]
   },
@@ -962,10 +966,10 @@
     "    i = int(sb-1)\n",
     "\n",
     "    # add histogram for this subject\n",
-    "    ???\n",
+    "    ax[i].???\n",
     "    \n",
     "    # add vertical line\n",
-    "    ???\n",
+    "    ax[i].???\n",
     "    \n",
     "    # add label and title\n",
     "    ax[i].set_xlim((-100,100))\n",
@@ -1264,7 +1268,7 @@
     "id": "m3Yw6KrWQKhG"
    },
    "source": [
-    "As an exercise: **add now one extra column to the dataframe df that contains the circular distance between the columns x1 and x2**. This is much easier than with `column_stack` in plain **numpy**, you just need to assign the new values to a new column name (for instance `df['distT1']`) Check with `df.head()` that you can see this new column in your table."
+    "As an exercise: **add now one extra column to the dataframe df that contains the circular distance between the columns x1 and x2**. This is much easier than with `column_stack` in plain **numpy**, you just need to assign the new values to a new column name (for instance `df['dist_x1x2']`) Check with `df.head()` that you can see this new column in your table."
    ]
   },
   {
