--- a/A1_Statistics/Assignment1.ipynb
+++ b/A1_Statistics/Assignment1.ipynb
@@ -248,7 +248,7 @@
    "source": [
     "***Now add an additional column to the dataframe: the error defined as the difference of the subject's estimation and the average of the stimulus.***\n",
     "\n",
-    "Hint: use the function `circdist_rad` from Assignment 0."
+    "Hint: use the function `circdist` from Assignment 0."
    ]
   },
   {
