--- a/A1_Statistics/Assignment1.ipynb
+++ b/A1_Statistics/Assignment1.ipynb
@@ -647,8 +647,8 @@
     "bool_0 = ??? # get a boolean for 0 deg trials\n",
     "bool_15 = ??? # get a boolean for 15 deg trials\n",
     "\n",
-    "plt.hist(ds[bool_0].error, alpha=0.5, bins=range(-20, 22, 2), label=\"0 deg\", density=True) # plot histogram of CW trials\n",
-    "plt.hist(ds[bool_15].error, alpha=0.5, bins=range(-20, 22, 2),label=\"15 deg\", density=True) # plot histogram of CCW trials\n",
+    "plt.hist(ds[bool_0].error, alpha=0.5, bins=range(-20, 22, 2), label=\"0 deg\", density=True) # plot histogram of 0 deg trials\n",
+    "plt.hist(ds[bool_15].error, alpha=0.5, bins=range(-20, 22, 2),label=\"15 deg\", density=True) # plot histogram of 15 deg trials\n",
     "\n",
     "plt.legend(); # draw legend\n",
     "plt.xlabel('Error')\n",
@@ -787,7 +787,7 @@
     "    bool_0 = ds['xavg'] == 0 # get a boolean for 0 deg trials\n",
     "    bool_15 = ds['xavg'] == 15 # get a boolean for 15 deg trials\n",
     "    \n",
-    "    t, p_val = ??? # t-test comparing mean error in CW and CCW trials for subject *subjec*\n",
+    "    t, p_val = ??? # t-test comparing mean error in 0 deg and 15 deg trials for subject *subjec*\n",
     "\n",
     "    if p_val < 0.05:\n",
     "        if ???:\n",
@@ -1000,7 +1000,7 @@
     "    bool_0 = ds['xavg'] == 0 # get a boolean for 0 deg trials\n",
     "    bool_15 = ds['xavg'] == 15 # get a boolean for 15 deg trials\n",
     "\n",
-    "    # we define our statistic of interest as the difference in medians of the two lists of errors, for CW and CCW trials.\n",
+    "    # we define our statistic of interest as the difference in medians of the two lists of errors, for 0 deg and 15 deg trials.\n",
     "    statistic = ???; \n",
     "\n",
     "    # t-test\n",
