corrected bug with Colab

--- a/A2_LinearRegression/Assignment2.ipynb
+++ b/A2_LinearRegression/Assignment2.ipynb
@@ -266,7 +266,9 @@
     "    plt.ylabel(??);\n",
     "\n",
     "    # Add a dotted line indicating the identity line\n",
-    "    plt.plot(x_data, x_data, linestyle='--', color='gray');"
+    "    plt.plot(x_data, x_data, linestyle='--', color='gray');\n",
+    "    \n",
+    "    plt.show(); # needed in Colab"
    ]
   },
   {
@@ -274,7 +276,7 @@
    "metadata": {},
    "source": [
     "This was nice but we ignored the stochastic part of the linear regression model (the added gaussian noise) which we would like to estimate as well, as it gives us an estimate of how much the model cannot explain about the data. To do so, we now need to simulate the model with noise and compare the distributions of points to the experimental one.\n",
-    "First, **write a function that simulates the linear regression model (with noise), given some values of the regressor $xavg$ and parameter values**. Parameters now include the intercept $\\beta_0$, the slope $\\beta_1$ and also $\\sigma$, the standard deviation of the gaussian noise. A gaussian random variable can be drawn using `random` from the `numpy` package."
+    "First, **write a function that simulates the linear regression model (with noise), given some values of the regressor $xavg$ and parameter values**. Parameters now include the intercept $\\beta_0$, the slope $\\beta_1$ and also $\\sigma$, the standard deviation of the gaussian noise. A gaussian random variable can be drawn using `normal` from the `numpy` package."
    ]
   },
   {
@@ -355,7 +357,9 @@
     "    plt.ylabel(??);\n",
     "\n",
     "    # Add a dotted line indicating the identity line\n",
-    "    plt.plot(x_data, x_data, linestyle='--', color='gray');"
+    "    plt.plot(x_data, x_data, linestyle='--', color='gray');\n",
+    "    \n",
+    "    plt.show(); # needed in Colab"
    ]
   },
   {
