correct typo C(subj)

--- a/A2_LinearRegression/Assignment2.ipynb
+++ b/A2_LinearRegression/Assignment2.ipynb
@@ -1549,7 +1549,7 @@
    "source": [
     "We will start with a naive approach that will illustrate how to use **categorical regressors**.\n",
     "So let's say we want to capture the variability of participant biases, i.e. their idiosyncratic tendency to over- or under-evaluate the stimulus mean in their reports. In the linear model, this is captured by the intercept $\\beta_0$. \n",
-    "So what we would like is a different intercept for each subject. This is done by adding subject identity as a categorical regressor in the design of a general linear model, which means simply `C(sub)` to the formula. This will estimate one weight for each subject (except the first subject taken as the reference). \n",
+    "So what we would like is a different intercept for each subject. This is done by adding subject identity as a categorical regressor in the design of a general linear model, which means simply `C(subj)` to the formula. This will estimate one weight for each subject (except the first subject taken as the reference). \n",
     "Note that this is different from simply adding `subj`, which would introduce a continuous instead of categorical regressor (i.e. it would capture a linear trend for later subjects to over-estimate or under-estimate compared to earlier subjects - this is not what we want!).\n",
     "**Add subject as a categorical variable to the linear regression model with x1 and x2 as regressors, and fit to the whole dataset.**"
    ]
