tutorial and assignment 3

--- a/A3_PsychometricCurves/tutorial_psychometric_curves_solutions.ipynb
+++ b/A3_PsychometricCurves/tutorial_psychometric_curves_solutions.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "bdfc5c8a",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "e76edaa0",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "4       1.0         1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "378a5bf3",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "af38b297-3eb8-423a-bcde-58ad5fe8d187",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "8e395d0f-5367-4196-9c3c-9d48f54813bd",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
     }
    ],
    "source": [
-    "???"
+    "print(logistic(0))"
    ]
   },
   {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "4bc0c319-14d4-4cd1-b40c-ba7264dc1745",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
     "    \"\"\"\n",
     "    \n",
     "    # probability of rightward choice in control and manipulated condition\n",
-    "    p = ???\n",
+    "    p = logistic(w0 + w1 * s)\n",
     "    \n",
     "    return p\n",
     "\n",
@@ -310,14 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "4d609650",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94302d57fd2a48078540db6621cdb8b7",
+       "model_id": "f8389d3855114eb9b6f94c8c2438c1f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -341,10 +341,10 @@
     "def plot_data_estimate(w0, w1):\n",
     "   \n",
     "    # plot model predictions\n",
-    "    ???\n",
+    "    plot_model(w0, w1)\n",
     "\n",
     "    # plot psychometric curve on top\n",
-    "    ???\n",
+    "    plot_data_psychometric(df_exp)\n",
     "    \n",
     "    plt.show(); # needed for Colab\n",
     "    "
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "ba0b5002",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "4f76e4a1",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
     }
    ],
    "source": [
-    "llh_B = ???\n",
+    "llh_B = LogLikelihood(df_exp, w0=0.4, w1=1.3)\n",
     "print(llh_B)"
    ]
   },
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "d64eeb81-c4b3-4e25-b587-bd453f1dfd0e",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "8eaebc2b-74c2-4706-b40b-09fc960b030a",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
     }
    ],
    "source": [
-    "???"
+    "plot_data_estimate(w0_hat, w1_hat)"
    ]
   },
   {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "a7090083",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,32 @@
     }
    ],
    "source": [
-    "???"
+    "# define linearly space values of Lambda and sigma\n",
+    "w0 = np.arange(-2, 2, 0.05)\n",
+    "w1 = np.arange(0, 4.0, 0.05)\n",
+    "\n",
+    "# compute all possible pairs of parameter values (defining a grid)\n",
+    "W0, W1 = np.meshgrid(w0, w1)\n",
+    "\n",
+    "# compute LLH for each of these parameter sets\n",
+    "LLH = np.zeros(W0.shape)\n",
+    "for j in range(W0.shape[0]):\n",
+    "    for k in range(W0.shape[1]):\n",
+    "        LLH[j,k] = LogLikelihood(df_exp, w0=W0[j,k], w1=W1[j,k])\n",
+    "\n",
+    "# define function to plot Log-Likelihood profile\n",
+    "def show_LL(LLH,w0,w1):\n",
+    "    im=plt.imshow(np.flipud(LLH), extent=[w0[0],w0[-1],w1[0],w1[-1]]);\n",
+    "    plt.ylabel('w1')\n",
+    "    plt.xlabel('w0')\n",
+    "    plt.colorbar(im)\n",
+    "    \n",
+    "\n",
+    "# plot LLH profile\n",
+    "show_LL(LLH,w0,w1)\n",
+    "\n",
+    "# add MLE parameters as red dot\n",
+    "plt.plot(w0_hat, w1_hat, marker='o', markersize=5, color='red');\n"
    ]
   },
   {
