--- a/A4_LogisticRegression/interaction.ipynb
+++ b/A4_LogisticRegression/interaction.ipynb
@@ -34,7 +34,7 @@
     "from statsmodels.formula.api import ols\n",
     "from scipy.stats import ttest_ind\n",
     "\n",
-    "data = pd.read_csv(\"interaction_data.csv\",sep=',')\n"
+    "data = pd.read_csv(\"https://raw.githubusercontent.com/wimmerlab/MBC-DataAnalysis/main/A4_LogisticRegression/interaction_data.csv\")\n"
    ]
   },
   {
